--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,17 @@
+
+body {
+    cursor: url('../assets/cursor/yugicursor.png'), default;
+}
+
+button, 
+a,
+img:hover,
+button:hover,
+a:hover {
+    cursor: url('../assets/cursor/yamiyugicursorGLOW.png');
+}
+
+
 .bg-video {
     position: absolute;
     z-index: -2;
@@ -87,9 +101,11 @@ font-size: 1rem;
 .card-versus__container {
     display: flex;
     flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
     padding-top: 0.1rem;
     height: 300px;
-    margin-top: 2rem;
 }
 .versus-top , .versus-bottom {
     display: flex;
@@ -117,8 +133,10 @@ font-size: 1rem;
 .card-infield {
     height: 11.2rem;
     width: 8rem;
+    border: 1px solid #fff;
     border-radius: 8px;
 }
+
 
 .card {
 transition: transform 0.2s;
@@ -127,3 +145,4 @@ transition: transform 0.2s;
 .card:hover {
     transform: scale(1.2);
 }
+
